<resources>
    <string name="app_name">TubesAKB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul_tips">Tips &amp; Trik Untuk Meningkatkan Style Anda</string>
    <string name="paragraf1">Memperhatikan style merupakan hal yang wajib dilakukan oleh para pria khususnya yang sudah beranjak dewasa (>17 Tahun). Dengan memperhatikan style dan menerapkannya sesuai umur dan kebutuhan, kalian pasti bakal keliatan lebih cakep. Contoh sederhana, misalnya kalian lagi nongkrong dan gak mungkin kan pake Suit atau bahkan Tuxedo karena bukan tempat yang pas untuk pake itu. Kalian pasti lebih memilih memakai kaos ataupun kemeja santai karena selain santai, itupun menambah kesan ganteng. Style seperti itu disebut Casual.</string>
    <string name="paragraf2">Selain casual, ada berbagai jenis style lainnya yaitu Basic (setelan polos), Streetwear (biasanya setelan hoodie, sweater, ataupun kaos oversize), Formal (pakaian formal biasanya untuk acara tertentu seperti Tuxedo, Blazer), Sporty (setelan berolahraga misalnya saat pergi Gym, bersepeda), dan Vintage (setelan retro ala abad 20an)</string>
    <string name="paragraf3">Style juga menggambarkan kepribadian seseorang loh. Kalian bisa dianggap banyak duit, orang professional, ataupun seorang pengusaha muda. Stylish ga harus mahal yang penting niat dan usaha. Sooo udah kebayang kan dan mulai sekarang kalian harus mulai memikirkan style agar pandangan orang terhadap kalian juga berubah drastis.</string>
    <string name="tips1">1.	Add an Extra Layer</string>
    <string name="isitips1">Tambahkan pakaian yg berlapis. Selain membuatmu semakin ganteng, itu juga bisa membuat badan kalian terlihat sedikit lebih berisi</string>
    <string name="tips2">2.	Buy Things That Look High End</string>
    <string name="isitips2">Belilah pakaian yang terlihat “mahal”. Bukan berarti barangnya harus mahal melainkan cukup terlihat mahal.</string>
    <string name="tips3">3.	Accessories</string>
    <string name="isitips3">Gunakanlah aksesoris tambahan seperti Jam tangan, gelang, kalung, kacamata ataupun topi. Tapi jangan terlalu berlebihan, cukup sesuaikan dengan kebutuhan style. Jika masih belum berani, minimal gunakan jam tangan karena itu sangat merubah penampilan kalian. Jangan lupa perhatikan juga lingkar jam tangannya dengan ukuran lengan kalian.</string>
    <string name="tips4">4.	Fitting</string>
    <string name="isitips4">Sesuaikan fit baju dan celana dengan badan kalian. Jangan terlalu besar dan jangan terlalu ketat. Baju yg terlalu besar bisa membuat kalian terlihat kurus, dan terlalu kecil bisa membuat kalian terlihat tidak bermodal dan memakai baju jaman dulu. Jika celana, pilihlah yg slim fit.</string>
    <string name="tips5">5.	Color Combination</string>
    <string name="isitips5">Gunakan warna yang cocok dengan style dan karakteristik kalian. Misalnya kalian ingin terlihat professional bisa gunakan warna Biru Navy, Merah Maroon, Abu-abu, Hitam, Khaki. Jika ingin terlihat Fun atau ceria gunakanlah warna terang misalnya Merah, Biru, Hijau, Kuning, dll. Jika ingin terlihat simple gunakanlah warna netral seperti Hitam, Putih, Abu-abu. Namun jika baru pertama kali belajar tentang style, lebih baik koleksi dulu warna netral agar lebih mudah meningkatkan percaya diri.</string>
    <string name="tips6">6.	Hairstyling &amp; Grooming</string>
    <string name="isitips6">Cobalah merombak rambut kalian jika rambut kalian berantakan atau “gitu-gitu aja”. Datangi barbershop dan minta saran sebaik mungkin untuk rambut kalian kedepannya atau lihat katalog rambut rambut pria di internet. Barbershop dan Tukang Cukur itu sama maksudnya tapi berbeda kualitasnya. Barbershop biasanya lebih professional dalam menata rambut dibanding dengan tukang cukur yang biasanya hanya melakukan potongan rambut  yg mainstream. Begitupun dengan kumis dan brewok kalian, rawatlah agar terlihat maskulin. Panjang atau pendeknya kumis dan brewok itu terserah kalian asalkan tetap cocok dan enak dilihat.</string>
    <string name="tips7">7.	Shoes</string>
    <string name="isitips7">Gunakanlah sepatu sesuai kebutuhan style kalian. Jika setelan formal, jangan pernah memakai sneakers. Gunakanlah sepatu formal seperti oxford, derby, chelsea dan boots. Jika casual dan basic, gunakanlah sepatu casual atau sneakers dan tidak perlu menggunakan sepatu formal namun masih bisa menggunakan Chelsea boots. Tapi jika setelan streetwear, kalian bisa memakai sneakers baik itu yg bermotif ribet ataupun simple.</string>
    <string name="tips8">8.	Workout &amp; Gym</string>
    <string name="isitips8">Percantik lah bentuk tubuh kalian. Usahakan pergi ke tempat gym atau minimal lakukanlah workout agar fitting kalian lebih bagus saat memilih berbagai macam jenis style. Tidak perlu terlalu besar sepert Om Deddy ataupun seperti Ade Rai tapi minimal tubuhnya memiliki bentuk yang jelas dan proporsional.</string>
    <string name="tips9">9.	Watch Your Mouth &amp; Attitude</string>
    <string name="isitips9">Perhatikan setiap perkataan yang kalian ucapkan terhadap orang lain, jangan sampai menyinggung perasaan orang lain. Perhatikan kelebihan dan kekurangan setiap orang supaya kalian dapat mencerna atau memahami karakteristik orang tersebut. Jika mengobrol dengan yang diatas kalian, hormatilah, bersikaplah sopan dan halus tapi jangan sampai kalian direndahkan. You are worth it bro! Lalu jika mengobrol dengan yg setara dengan kalian, hargailah ucapan mereka, jangan saling melebih-lebihkan kemampuan dan material dari masing masing orang, bercandalah sesuai porsinya. Pahamilah karakteristik mereka apakah mereka orang yang baperan atau santai. Tunjukkanlah sikap yang membuktikan bahwa sikap dan perilaku kalian lebih dewasa dari yang lain maka kalian akan disegani. Dan yang terpenting adalah jika kalian berbincang dengan yg dibawah kalian, mari kita anggap sekarang kita berumur 20-25 tahun dan memiliki harta, tahta yang bagus dan ataupun sudah menjadi pengusaha muda. Jangan pernah sekalipun merendahkan pekerjaan orang lain yang dibawah kita. Contoh simple dan paling banyak ditemui adalah perlakuan terhadap OB (Office Boy), Sales atau tukang dagang, Pembantu, Satpam, tukang parkir atau Supir sekalipun. Minimal senyum dan ucapkan lah terima kasih kepada mereka yang sudah membantu kita. Jangan lupa ucapkan “Permisi” atau “Maaf” jika melihat OB atau pembantu yang sedang membersihkan lantai di jalan yg ingin kalian lewati. Intinya hargailah mereka dan jangan pernah kalian merasa tinggi karena jalan hidup sudah ada yang ngatur .</string>
</resources>
