<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Kenapa Style Menjadi Hal Yang Sangat Penting Bagi Seorang Pria?"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBiruNavy"
            android:textSize="22sp"
            android:padding="15dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:src="@drawable/logommm"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraf1"
            android:padding="8dp"
            android:textColor="@color/colorBiruNavy"
            android:textSize="14sp"
            android:layout_gravity="center_vertical|end"
            android:gravity="start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraf2"
            android:padding="8dp"
            android:textColor="@color/colorBiruNavy"
            android:textSize="14sp"
            android:layout_gravity="center_vertical|end"
            android:gravity="start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraf3"
            android:padding="8dp"
            android:textColor="@color/colorBiruNavy"
            android:textSize="14sp"
            android:layout_gravity="center_vertical|end"
            android:gravity="start"/>






    </LinearLayout>



</ScrollView>
</FrameLayout>